Change default redirect URL to ReCAPTCHA page

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         }
 
         function performRedirect() {
-            const redirectUrl = savedUrl || 'https://google.com';
+            const redirectUrl = savedUrl || 'https://parohod228.github.io/ReCAPTCHA';
             
             console.log('[Redirect] Redirecting to:', redirectUrl);
             
